Implement Splash Screen Add logo Add launcher icon Add colors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Safana</string>
+    <string name="tagline">Think Big! Think Safana!</string>
 </resources>
