--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Safana</string>
     <string name="tagline">Think Big! Think Safana!</string>
+    <string name="enter_your_id">Enter Your ID</string>
+    <string name="enter_your_password">Enter Your Password</string>
 </resources>
