--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="menu_project_details">Project details</string>
+    <string name="allowance_management">Allowance Management</string>
+    <string name="leave_management">Leave Management</string>
 </resources>
