1. change UI icons in nav view. 2. add tasks fragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="allowance_management">Allowance Management</string>
     <string name="leave_management">Leave Management</string>
     <string name="go_to_calender">Go to Calender</string>
+    <string name="tasks">Tasks</string>
 </resources>
