implement project status fragment. add pie chart and line chart in the current project activity. add charts library in the gradle file.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,6 @@
     <string name="tasks">Tasks</string>
     <string name="enter_your_id">Enter your id</string>
     <string name="enter_your_password">Enter your password</string>
+    <string name="project_status">Project Status</string>
+    <string name="_70">70%</string>
 </resources>
