Add Logout Button Add worker laws in supervisor Add charts in supervisor project details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,5 @@
     <string name="name">Name</string>
     <string name="save">Save</string>
     <string name="edit">Edit</string>
+    <string name="logout">Logout</string>
 </resources>
