1. add dynamic retriving of name and email into the dashboard nav view header. 2. implement edit profile activity to update the user profile. 3. loading the user profile in the edit profile activity. 4. handle on back pressed in the edit profile activity for the first time. 5. add default icon in the edit profile activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,7 +73,7 @@
     <string name="enter_your_password">Enter your password</string>
     <string name="project_status">Project Status</string>
     <string name="_70">70%</string>
-    <string name="date_of_birth">Date of Birth</string>
+    <string name="date_of_birth">Date of Birth (Format - 19/02/2000)</string>
     <string name="gender">Gender</string>
     <string name="mobile_number">Mobile Number</string>
     <string name="role">Role</string>
