1. Add custom alert dialog progress class. 2. Display edit pencil icon on the fab if the project is already created otherwise create project option. 3. Retrive the information of the project if the project is already present for the supervisor in the edit project activity. 4. Retrive the project workers and free workers in the select workers activity and highlighted already added project workers. 5. Load the project details activity in onResume(). 6. Delete the project_id from the worker document in the database if he/she is unselected from the project. 7. Update the project with newer employees and allow to reomve the already present employees from the project.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,5 @@
     <string name="project_start_date">Project Start Date*</string>
     <string name="project_due_date">Project Due Date*</string>
     <string name="create">Create</string>
+    <string name="project_save">SAVE</string>
 </resources>
